themes/mm/scss/main.scss
//------------------------------
// Imports
//------------------------------

@import "variables";
@import "fonts";
@import "bootstrap-v4/bootstrap-flex";

//------------------------------
// Global Theme
//------------------------------

body {
  font-weight: 300;
}

.nav {
  display: flex;
  align-items: baseline;
  margin-top: 1rem;
  margin-bottom: 2.2rem;

  .brand {
    color: $gray-dark;
    font-size: 30px;
    margin-right: 1rem;
  }

  .nav-link.about {
    margin-left: auto;
  }
}

.footer {
  color: $gray-light;
  text-align: center;
  margin: 2rem 0 3rem;

  & > a {
    color: inherit;
    text-decoration: none;
  }
}

h1 {
  margin-bottom: 1.7rem;
}

h2, h3, h4, h5, h6 {
  margin-top: 2rem;
}

li {
  // Add more space between list items
  margin-bottom: 0.5rem;
}

// Larger clickable area
// README: Reduce size you experience problems with overlapping links
// ↳ For debugging enable CSS Outlining at http://localhost:3001/remote-debug
a {
  position: relative;
  margin: -0.6em -1em;
  padding: 0.6em 1em;
}

table {
  @extend .table;
  @extend .table-bordered;
  // @extend .table-inverse;
}

thead {
  // @extend .thead-inverse; // TODO: Decide if I want to keep this OR remove
}

@include media-breakpoint-up(xs) {}

@include media-breakpoint-up(sm) {}

@include media-breakpoint-up(md) {}

@include media-breakpoint-up(lg) {
  h1 {
    margin: 1.3rem 0 2.3rem;
  }
}

//------------------------------
// Blog posts
//------------------------------

.page,
.post {
  margin-left: auto;
  margin-right: auto;

  & > h1 {
    text-align: center;
  }
}

.meta {
  margin-top: 1.8rem;
}

.author {
  white-space: pre-line;
}

.img-author {
  // margin-bottom: 0.35rem;
}

.tags {
  list-style: none;
  padding-left: 0;

  & > li {
    margin-bottom: 0;
  }
}

.lead.bg-primary {
  padding: 1rem;
}

.footnote-ref {
  margin-left: 0.2rem;
}

//------------------------------
// Homepage
//------------------------------

.home-intro {
  text-align: center;
}

.subscribe {
  border-top: 1px solid $gray-light;
  border-bottom: 1px solid $gray-light;
  text-align: center;
  padding: 2rem 0 2.4rem;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

.summaries > article > p:last-of-type:after {
  content: "…";
}

.more {
  margin-top: 1rem;
}

